--- a/src/main/webapp/myStyle.css
+++ b/src/main/webapp/myStyle.css
@@ -110,6 +110,18 @@ fieldset{
     border: 1px solid black;
 }
 
+.addToCartButton button{
+    text-align:left;
+    margin-left: 40px;
+    padding: 10px;
+    font-size:16px;
+    cursor: pointer;
+}
+
+.addToCartButton button:hover{
+    background-color: rgb(95, 139, 235)
+}
+
 input[type="submit"].formButton:hover
 {
     border:1px solid black;
