--- a/src/main/webapp/myStyle.css
+++ b/src/main/webapp/myStyle.css
@@ -75,28 +75,28 @@
 }
 
 input[type=number]{
-    width: 80%;
+    width: 100%;
 }
 
 input[type=text]{
-    width: 80%;
+    width: 100%;
 }
 
 input[type=tel]{
-    width: 80%;
+    width: 100%;
 }
 
 
 #shipping-method{
-    width: 80%;
+    width: 100%;
 }
 
 #expireMM{
-    width: 40%;
+    width: 49%;
 }
 
 #expireYY{
-    width: 40%;
+    width: 49%;
 }
 
 fieldset{
@@ -144,7 +144,7 @@ body {
 .row {
     text-align: center;
     padding: 20px;
-    padding-bottom: 0%;
+    padding-bottom: 0;
 
 }
 
@@ -191,18 +191,19 @@ img {
 
 @media only screen and (min-width: 754px) {
     /* / For desktop: / */
-    .col-2{width: 33.33%;}
+    /*.col-2{width: 33.33%;}*/
     .col-3 {width: 50%;}
     .img-container { height: 600px; }
 }
 
 @media only screen and (min-width: 1100px) {
     /* / For desktop: / */
+    .col-2{width: 50%;}
     .col-3 {width: 33.33%;}
 }
 
 @media only screen and (min-width: 1400px) {
     /* / For desktop: */
-    .col-2{width: 16.66%;}
+    .col-2{width: 20%;}
     .col-3 {width: 25%;}
 }
